crates/jarl-cli/tests/integration/snapshots/integration__help__help-3.snap
---
source: crates/jarl-cli/tests/integration/help.rs
expression: "Command::new(binary_path()).arg(\"-h\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
jarl: Find and Fix Lints in R Code

Usage: jarl [OPTIONS] <COMMAND>

Commands:
  check   Check a set of files or directories
  server  Start a language server
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global options:
      --log-level <LOG_LEVEL>  The log level. One of: `error`, `warn`, `info`, `debug`, or `trace`. Defaults to `warn`
      --no-color               Disable colored output. To turn colored output off, either set this option or set the environment variable `NO_COLOR` to any non-zero value

For help with a specific command, see: `jarl help <command>`.

----- stderr -----

----- args -----
-h
