crates/jarl-cli/tests/integration/snapshots/integration__help__help_check-2.snap
---
source: crates/jarl-cli/tests/integration/help.rs
expression: "Command::new(binary_path()).arg(\"check\").arg(\"-h\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
Check a set of files or directories

Usage: jarl check [OPTIONS] <FILES>...

Arguments:
  <FILES>...  List of files or directories to check or fix lints, for example `jarl check .`.

Options:
  -f, --fix                            Automatically fix issues detected by the linter.
  -u, --unsafe-fixes                   Include fixes that may not retain the original intent of the  code.
      --fix-only                       Apply fixes to resolve lint violations, but don't report on leftover violations. Implies `--fix`.
      --allow-dirty                    Apply fixes if the Git branch is not clean, meaning that there are uncommitted files.
  -s, --select-rules <SELECT_RULES>    Names of rules to include, separated by a comma (no spaces). [default: ]
  -i, --ignore-rules <IGNORE_RULES>    Names of rules to exclude, separated by a comma (no spaces). [default: ]
  -w, --with-timing                    Show the time taken by the function.
  -m, --min-r-version <MIN_R_VERSION>  The mimimum R version to be used by the linter. Some rules only work starting from a specific version.
      --output-format <OUTPUT_FORMAT>  Output serialization format for violations. [default: concise] [possible values: concise, github, json]
  -h, --help                           Print help (see more with '--help')

Global options:
      --log-level <LOG_LEVEL>  The log level. One of: `error`, `warn`, `info`, `debug`, or `trace`. Defaults to `warn`
      --no-color               Disable colored output. To turn colored output off, either set this option or set the environment variable `NO_COLOR` to any non-zero value

----- stderr -----

----- args -----
check -h
